styles/imggen.css
:root {
    --pop-up-bg-color: #ffe600;
}
* {
    background-color: #222;
    color: #cccccc;
    font-family: 'Courier New', Courier, monospace;
    margin: 15px;
}
h1, h2 { 
    color: #85daff;
    text-shadow: 4px 8px 12px rgba(55, 128, 200, 0.6);
    margin-left: 30px;
}
h1 {
    font-size: 36pt;
}
h1>img {
    margin: 0px 15px 0px 0px;
}
canvas {
    padding: 2px;
    background-color: #000000;
}
input {
    padding: 5px;
    background-color: #7fbeed;
    color: #03478c;
    font-weight: bold;
    font-size: 120%;
    border-radius: 3px;
}
button {
    padding: 10px;
    background-color: #968c8c;
    font-weight: bold;
    font-size: 140%;
    border-radius: 5px;
}
button.buttnavail {
    color: #ffffff;
}
button.buttnnotavail {
    color: #857575;
}
.grpdiv {
    display: inline-block;
    background-color: #444;
    border-style: solid;
    border-width: 3px;
    border-color: #666;
    border-radius: 5px;
}
.grpdiv>label {
    padding: 3px;
    border-radius: 3px;
}
.grpdiv>select {
    padding: 5px;
    color: #000000;
    background-color: #b696c6;
    font-weight: bold;
}
p {
    margin-left: 30px;
}
em {
    font-weight: bold;
    margin-left: 0px;
    margin-right: 0px;
    color: #ddddcc;
}
.warninput {
    background-color: #ffff00;
    color: #ff0000;
}
#dirform {
    display: none;  /* TODO */
    position: fixed;
    bottom: 0;
    right: 15px;
    z-index: 9;
    background-color: var(--pop-up-bg-color);
    padding: 10px;
}
#dirform>div,#dirform h2,#dirform h3 {
    color: #222;
    background-color: var(--pop-up-bg-color);
}
#dirform>p {
    color: #222;
    background-color: var(--pop-up-bg-color);
    margin-top: 10px;
    padding: 5px;
}
#histview>table {
    margin-top: 100px;
    margin-bottom: 50px;
    margin-left: 0px;
    border-collapse: collapse;
}
#histview td {
    background-color: #30495d;
    padding: 3px;
    border: 2px solid  #666;
    color: #c9dbec;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size: 8pt;
}
#histview th {
    background-color: #5f7585;
    padding: 5px;
    border: 2px solid  #666;
    color: #b1cde9;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}
#histview a {
    background-color: inherit;
    height: inherit;
    color: #aff;
    font-size: 12pt;
    font-weight: bold;
    padding: 0px 5px 0px 5px;
}
.shortish {
    width: 5em;
}
.largegrpdiv {
    margin-left: 33px;
    margin-top: 30px;
    padding: 10px;
    border-style: solid;
    border-width: 3px;
    border-color: #487694;
    border-radius: 7px;
    background-color: #202b33;
}
.buttondiv {
    background-color: #202b33;
}
@media only screen and (max-width: 800px) {
    .grpdiv {
        display: inline-block;
        background-color: #222;
        border-style: none;
        margin-top: 3px;
        margin-bottom: 2px;
    }
    .grpdiv:not(.grpbreakok) {
        white-space: nowrap;
    }
    .grpdiv>label {
        /* padding: 1px; */
        border-style: none;
        margin-left: 0px;
        margin-top: 5px;
    }
    .grpdiv>select {
        /* padding: 0px; */
        margin: 0px 0px 10px 0px;
        color: #000000;
        background-color: #b696c6;
        font-weight: bold;
        font-size: 14pt;
        border-radius: 3px;
    }
    .grpdiv>input {
        /* padding: 0px; */
        margin: 0px 0px 10px 0px;
        border-radius: 8px;
    }
    button {
        padding: 6px;
        font-size: smaller;
        background-color: #444;
        border-radius: 3px;
        margin: 10px 5px 0px 5px;
    }
    .largegrpdiv {
        margin-left: 10px;
        margin-top: 30px;
        padding: 5px;
        border-style: none;
        background-color: transparent;
    }
    .buttondiv {
        background-color: transparent;
    }
    
    
}

